syntax = "proto3";
package build;

message BuildRequest {
    // manifest namespace
    string namespace = 1;
    // manifest id
    string manifest_id = 2;
    // target platform
    string target_platform = 3;
}

message BuildResponse {
    // version: build version
    uint64 version = 1;
}

service Builder {
    rpc Build(BuildRequest) returns (BuildResponse) {}
}
