syntax = "proto3";
package schedule;

message ScheduleRequest {}

message BuilderInfo {
    // builder id
    string id = 1;
    // builder address
    string address = 2;
}

message ScheduleResponse {
    optional BuilderInfo builder_info = 1;
}

service Scheduler {
    rpc Schedule(ScheduleRequest) returns (ScheduleResponse) {}
}